--- a/index.ipynb
+++ b/index.ipynb
@@ -54,13 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "travel_month = None"
+    "travel_month = None\n",
+    "travel_month = 'January'\n",
+    "travel_month"
    ]
   },
   {
@@ -90,13 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number_of_weeks = None"
+    "number_of_weeks = None\n",
+    "number_of_weeks = 3\n",
+    "number_of_weeks"
    ]
   },
   {
@@ -125,7 +147,8 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks # 5"
+    "number_of_weeks = 5 \n",
+    "number_of_weeks# 5"
    ]
   },
   {
@@ -159,14 +182,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
